k8s/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: hello-service
# spec:
#   type: ClusterIP
#   selector:
#     app: hello
#   ports:
#     - port: 80
#       targetPort: 80

apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: LoadBalancer
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
